# Stealth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/: Observable.hpp  Observer.hpp  catch.hpp
res/fonts/: CaptureIt-LICENSE.txt
res/maps/: 01-map.tmx  01.xml  01_test.xml  02-map.tmx  player.tsx
src/: AStar.cpp  AStar.hpp  AStar2.cpp  AStar2.hpp  AdvancementManager.cpp  AdvancementManager.hpp  AdvancementManagerObserver.hpp  AdvancementManagerSubject.hpp  Animation.cpp  Animation.hpp  Astar.cpp  Astar.hpp  BackgroundObject.hpp  Direction.hpp  Enemy.cpp  Enemy.hpp  EnemyShootingObserver.hpp  Game.cpp  Game.hpp  GameCursor.cpp  GameCursor.hpp  GameObject.cpp  GameObject.hpp  GameState.cpp  GameState.hpp  GameTest.cpp  GameTest.hpp  HunterStrategy.cpp  HunterStrategy.hpp  Inventory.cpp  Inventory.hpp  IsStealthObserver.hpp  KilledEnemyObserver.cpp  KilledEnemyObserver.hpp  LoadScreen.cpp  LoadScreen.hpp  MainMenu.cpp  MainMenu.hpp  MathHelper.cpp  MathHelper.hpp  (+32 more)
tests/: AStar2_test.cpp  AStar2_visual_test.cpp  AStar_test.cpp  Enemy_test.cpp  GameTest.cpp  GameTest.hpp  Game_test.cpp  MathHelper_test.cpp  tests.cpp
tests/res_test/: test_file.xml  test_map.tmx
